Added deck card counter

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         <input type="text" placeholder="Search DIGIMON" name="search">
         <button type="submit">Search</button>
     </form>
+    <div id="deck-form">
+        <form>
+            <label for="deck-card-input">Deck:</label>
+            <input type="text" id="deck" name="fname"<br>
+            <label for="digitama-card-input">Digitama:</label>
+            <input type="text" id="digitama" name="lname">
+            <input type="button" value="Submit" onclick="deckCalc()">
+        </form>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
