Added media queries

--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
             </div>
         </div>
         <!--Digimon card search bar-->
-        <form>
+        <form class="container">
             <div class="search-bar">
-                <input type="text" id="card-input" placeholder="Enter DIGIMON name or Card#" size="23" name="search">
+                <input type="text" id="card-input" placeholder="Enter DIGIMON name" size="16" name="search">
                 <input type="button" value="submit" onclick="cardSearch()">
             </div>
             <div id="card-display"></div>
         </form>
     </div>
-    <form class="deck-counter">
-        <label for="deck-card-input">Deck:</label>
-        <input type="text" id="deck" name="fname" size="3">
-        <label for="digitama-card-input">Digitama:</label>
-        <input type="text" id="digitama" name="lname" size="3">
-        <input type="button" value="submit" onclick="deckCalc()">
-    </form>
-    <p class="card-count"></p>
+    <div class="container-2">
+        <form id="deck-counter">
+            <label for="deck-card-input">Deck:</label>
+            <input type="text" id="deck" name="fname" size="3">
+            <label for="digitama-card-input">Digitama:</label>
+            <input type="text" id="digitama" name="lname" size="3">
+            <input type="button" value="submit" onclick="deckCalc()">
+        </form>
+        <p class="card-count"></p>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
